fix(login-ui): implemented the changes

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,7 +11,7 @@
         android:id="@+id/clLogin"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="@dimen/_15sdp"
+        android:paddingHorizontal="@dimen/_15sdp"
         app:layout_constraintBottom_toTopOf="@+id/btnLogin"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -24,7 +24,7 @@
             android:text="@string/hello_again"
             android:textColor="@color/yellow_orange"
             android:textSize="@dimen/_25ssp"
-            app:fontFamily="@font/poppins_extra_bold"
+            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@+id/tvWelcomeText"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -74,7 +74,6 @@
 
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/etEmail"
-                style="@style/Widget.Material3.AutoCompleteTextView.OutlinedBox.Dense"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:hint="@string/enter_email"
@@ -101,12 +100,14 @@
         <com.google.android.material.textfield.TextInputLayout
             android:id="@+id/etlPassword"
             android:layout_width="0dp"
+            style="@style/ThemeOverlay.Material3.TextInputEditText.OutlinedBox.Dense"
             android:layout_height="wrap_content"
             app:boxCornerRadiusBottomEnd="@dimen/_5sdp"
             app:boxCornerRadiusBottomStart="@dimen/_5sdp"
             app:boxCornerRadiusTopEnd="@dimen/_5sdp"
             app:boxCornerRadiusTopStart="@dimen/_5sdp"
             app:hintEnabled="false"
+            app:endIconMode="password_toggle"
             app:layout_constraintBottom_toTopOf="@+id/cbShowPassword"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -127,8 +128,10 @@
             android:layout_width="wrap_content"
             android:layout_height="0dp"
             android:buttonTint="@color/light_grey"
-            android:text="@string/show_password"
+            android:text="@string/remember_me"
+            android:textColor="@color/light_grey"
             android:textSize="@dimen/_11ssp"
+            android:fontFamily="@font/poppins_medium"
             app:layout_constraintBottom_toBottomOf="@+id/tvForgotPassword"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/tvForgotPassword" />
@@ -142,7 +145,7 @@
             android:textAlignment="center"
             android:textColor="@color/light_grey"
             android:textSize="@dimen/_11ssp"
-            app:fontFamily="@font/poppins_semi_bold"
+            app:fontFamily="@font/poppins_medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/etlPassword" />
@@ -211,7 +214,6 @@
         android:id="@+id/lineViewEnd"
         android:layout_width="0dp"
         android:layout_height="@dimen/_1sdp"
-        android:layout_marginTop="@dimen/_5sdp"
         android:layout_marginEnd="@dimen/_15sdp"
         android:background="@color/light_grey"
         app:layout_constraintBottom_toBottomOf="@id/tvOrContinueWith"
