--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,11 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="pinStyle" >
+    <style name="pinStyle">
         <item name="minWidth">@dimen/_35sdp</item>
         <item name="minHeight">@dimen/_35sdp</item>
     </style>
-    
 
+    <style name="dialogBackground" parent="Theme.AppCompat.DayNight.Dialog">
+        <item name="android:radius">@dimen/_3sdp</item>
+        <item name="backgroundColor">@color/white</item>
+        <item name="android:windowBackground">@android:color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowNoTitle">true</item>
+    </style>
 
 </resources>
