--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -182,10 +182,30 @@
             android:paddingVertical="@dimen/_10sdp"
             android:text="@string/log_in"
             android:textSize="@dimen/_11ssp"
+            android:alpha="0.5"
+            android:textColor="@color/white"
+            android:enabled="false"
             app:cornerRadius="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/clLogin" />
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:trackColor="@color/black"
+            app:trackThickness="8dp"
+            android:elevation="@dimen/_5sdp"
+            app:indicatorColor="@color/white"
+            app:indicatorDirectionCircular="clockwise"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:indicatorSize="@dimen/_20sdp"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintTop_toTopOf="@id/btnLogin"
+            app:layout_constraintBottom_toBottomOf="@id/btnLogin"
+            app:layout_constraintStart_toStartOf="@id/btnLogin"
+            app:layout_constraintEnd_toEndOf="@id/btnLogin"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/signUpNavigation"
