--- a/app/src/main/res/layout/fragment_phone_login.xml
+++ b/app/src/main/res/layout/fragment_phone_login.xml
@@ -89,6 +89,23 @@
             android:textSize="@dimen/_13ssp" />
 
     </com.google.android.material.textfield.TextInputLayout>
+    <com.google.android.material.progressindicator.CircularProgressIndicator
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:trackColor="@color/black"
+        app:trackThickness="8dp"
+        android:elevation="@dimen/_5sdp"
+        app:indicatorColor="@color/white"
+        app:indicatorDirectionCircular="clockwise"
+        android:indeterminate="true"
+        android:visibility="gone"
+        app:indicatorSize="@dimen/_20sdp"
+        app:layout_constraintHorizontal_bias="0.7"
+        app:layout_constraintTop_toTopOf="@id/btnShareOtp"
+        app:layout_constraintBottom_toBottomOf="@id/btnShareOtp"
+        app:layout_constraintStart_toStartOf="@id/btnShareOtp"
+        app:layout_constraintEnd_toEndOf="@id/btnShareOtp"/>
 
 
     <com.google.android.material.button.MaterialButton
@@ -101,6 +118,8 @@
         android:fontFamily="@font/poppins_bold"
         android:paddingVertical="@dimen/_10sdp"
         android:text="@string/send_otp"
+        android:alpha="0.5"
+        android:textColor="@color/white"
         android:textSize="@dimen/_11ssp"
         app:cornerRadius="@dimen/_10sdp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -116,6 +135,7 @@
         android:textAlignment="center"
         android:textColor="@color/light_grey"
         android:textSize="@dimen/_11ssp"
+        android:visibility="gone"
         app:fontFamily="@font/poppins_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
