--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -149,7 +149,7 @@
 
 
             <com.google.android.material.checkbox.MaterialCheckBox
-                android:id="@+id/terms"
+                android:id="@+id/rememberMe"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/remember_password"
@@ -171,12 +171,32 @@
             android:backgroundTint="@color/yellow_orange"
             android:fontFamily="@font/poppins_bold"
             android:paddingVertical="@dimen/_10sdp"
+            android:alpha="0.5"
+            android:textColor="@color/white"
             android:text="@string/signUp"
             android:textSize="@dimen/_11ssp"
             app:cornerRadius="@dimen/_10sdp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/clLogin" />
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:trackColor="@color/black"
+            app:trackThickness="8dp"
+            android:elevation="@dimen/_5sdp"
+            app:indicatorColor="@color/white"
+            app:indicatorDirectionCircular="clockwise"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:indicatorSize="@dimen/_20sdp"
+            app:layout_constraintHorizontal_bias="0.7"
+            app:layout_constraintTop_toTopOf="@id/btnSignUp"
+            app:layout_constraintBottom_toBottomOf="@id/btnSignUp"
+            app:layout_constraintStart_toStartOf="@id/btnSignUp"
+            app:layout_constraintEnd_toEndOf="@id/btnSignUp"/>
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/signUpNavigation"
