feat(remember_me): add the ui setup for remember me profile.

--- a/app/src/main/res/layout/fragment_phone_login.xml
+++ b/app/src/main/res/layout/fragment_phone_login.xml
@@ -119,6 +119,7 @@
         android:paddingVertical="@dimen/_10sdp"
         android:text="@string/send_otp"
         android:alpha="0.5"
+        android:enabled="false"
         android:textColor="@color/white"
         android:textSize="@dimen/_11ssp"
         app:cornerRadius="@dimen/_10sdp"
