--- a/app/src/main/res/layout/fragment_sign_up.xml
+++ b/app/src/main/res/layout/fragment_sign_up.xml
@@ -172,6 +172,7 @@
             android:fontFamily="@font/poppins_bold"
             android:paddingVertical="@dimen/_10sdp"
             android:alpha="0.5"
+            android:enabled="false"
             android:textColor="@color/white"
             android:text="@string/signUp"
             android:textSize="@dimen/_11ssp"
