--- a/app/src/main/res/layout/fragment_forgot_bottom_sheet.xml
+++ b/app/src/main/res/layout/fragment_forgot_bottom_sheet.xml
@@ -16,6 +16,18 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
+    <ProgressBar
+        android:id="@+id/bottomProgress"
+        android:layout_width="wrap_content"
+        android:layout_marginTop="@dimen/_10sdp"
+        android:layout_height="wrap_content"
+        app:indicatorColor="@color/yellow_orange"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/bottomOpener"
+        />
+
+
     <!--  for password change layout  -->
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/tvNewPassword"
@@ -28,7 +40,7 @@
         app:fontFamily="@font/poppins_medium"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomOpener" />
+        app:layout_constraintTop_toBottomOf="@+id/bottomProgress" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/newPasswordLayout"
@@ -129,7 +141,7 @@
         app:layout_constraintBottom_toTopOf="@+id/forgotEmailLayout"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/bottomOpener" />
+        app:layout_constraintTop_toBottomOf="@+id/bottomProgress" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/forgotEmailLayout"
@@ -253,6 +265,8 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
+
+
     <RadioGroup
         android:id="@+id/switchHandler"
         android:layout_width="match_parent"
@@ -267,6 +281,7 @@
             android:id="@+id/tryMoreMethods"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/try_mobile"
             android:textColor="@color/yellow_orange"
@@ -288,6 +303,16 @@
             android:layout_height="wrap_content"
             android:fontFamily="@font/poppins_medium"
             android:text="@string/not_receive_otp"
+            android:textColor="@color/yellow_orange"
+            android:textSize="@dimen/_11ssp"
+            android:visibility="gone" />
+
+        <com.google.android.material.textview.MaterialTextView
+            android:id="@+id/waitForTimer"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/poppins_medium"
+            android:text="@string/wait_for_20_second_resend_otp"
             android:textColor="@color/yellow_orange"
             android:textSize="@dimen/_11ssp"
             android:visibility="gone" />
